tests/pos/simple/glob-04.ts

/*@ a :: { number | v > 0 } */
var a = 1;

var b = a;

assert(b > 0);

var c = 1;

assert(c === 1);

